[package]
name = "myser"
authors = ["Adrian Parvin Ouano <me@adrianpar.vin>"]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.15"

[dependencies.nom]
version = "7.1.1"
default-features = false
